# PETAPP

./: .env.example  .gitignore  Architecture.md  CLAUDE.md  CatsApp.md  docker-compose.yml
.devcontainer/: Dockerfile  create-tables.sh  devcontainer.json  init-mobile.sh  post-create.sh  seed-local-data.sh
backend/: CLAUDE.md  Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs  state.rs
backend/crates/api/src/auth/: middleware.rs  mod.rs  service.rs
backend/crates/api/src/config/: mod.rs
backend/crates/api/src/db/: cats_repo.rs  health_repo.rs  medicine_repo.rs  mod.rs  users_repo.rs  weight_repo.rs
backend/crates/api/src/errors/: mod.rs
backend/crates/api/src/models/: api_response.rs  cat.rs  health_record.rs  medicine_reminder.rs  mod.rs  user.rs  weight_log.rs
backend/crates/api/src/routes/: auth.rs  cats.rs  health.rs  health_records.rs  medicine_reminders.rs  mod.rs  uploads.rs  weight_logs.rs
backend/crates/api/src/s3/: mod.rs
backend/migrations/: 001_initial.sql
docs/diagrams/: 01-system-overview.mmd  02-request-flow.mmd  03-rust-backend.mmd  04-mobile-app.mmd  05-cross-device-sync.mmd
infra/: samconfig.toml  template.yaml
mobile/: App.tsx  CLAUDE.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/components/: CatCard.tsx  DashboardSummary.tsx  MedicineReminderCard.tsx  WeightChart.tsx
mobile/src/config/: env.ts
mobile/src/contexts/: AuthContext.tsx
mobile/src/hooks/: useCats.ts  useDashboardSummary.ts  useHealthRecords.ts  useMedicineReminders.ts  useWeightLogs.ts
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: AddCatScreen.tsx  CatProfileScreen.tsx  HealthRecordsScreen.tsx  HomeScreen.tsx  MedicineRemindersScreen.tsx  SignInScreen.tsx  SignUpScreen.tsx  WeightLogScreen.tsx
mobile/src/services/: apiClient.ts  authService.ts  notificationService.ts  uploadService.ts
mobile/src/theme/: index.ts
mobile/src/types/: index.ts
