[workspace]
members = ["crates/api"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
argon2 = "0.5"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = "9"
anyhow = "1"
dotenvy = "0.15"
tokio-util = { version = "0.7", features = ["io"] }
